# PicaSim

./: .Makefile.swp  .gitignore  .gitmodules  ANGLE-License.txt  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CODE_STYLE.md  LICENSE.txt  Main.cpp  Makefile  Makefile.bak  ParallaxPanorama.md  PicaSim.mkb  PicaSimAndroidManifest.xml  PicaSimWin10Manifest.xml  PicaSim_deployment.mkf  PlaneSetupNotes.txt  README.md  Remplace.txt  Setup.iss  SetupDev.iss  TODO.md  VERSIONS.txt  cmake_install.cmake  compile_commands.json  development.icf  macos-create_app_bundle.sh  macos-create_dmg.sh  packaging_excludes.txt  trace.txt  trial-mode-wp80.xml  trial-mode.xml  vcpkg.json  windows.icf
.claude/: settings.local.json
.github/workflows/: macos-build.yml  macos-release.yml  windows-build.yml
Application/: Main.cpp
Application/AIController/: AIController.h  AIControllerGlider.cpp  AIControllerGlider.h  AIControllerPowered.cpp  AIControllerPowered.h  AIControllerTug.cpp  AIControllerTug.h
Application/Challenge/: Challenge.cpp  Challenge.h  ChallengeDuration.cpp  ChallengeDuration.h  ChallengeFreeFly.cpp  ChallengeFreeFly.h  ChallengeLimbo.cpp  ChallengeLimbo.h  ChallengeRace.cpp  ChallengeRace.h  TrialOverlay.cpp  TrialOverlay.h
Application/Controller/: Accelerometer.cpp  Accelerometer.h  Controller.h  Gyro.cpp  Gyro.h  HumanController.cpp  HumanController.h  NetworkController.cpp  NetworkController.h  PicaJoystick.cpp  PicaJoystick.h  gamepad.h  gamepad_interface.cpp  gamepad_interface.h
Application/Files/: 3ds.cpp  3ds.h  File.cpp  File.h  ac3d.cpp  ac3d.h  ac3dTexture.cpp
Application/General/: ClassesFontMarmelade.h  ClassesFontsMarmelade.cpp  ClassesMarmelade.cpp  ClassesMarmelade.h  ClassesUIMarmelade.cpp  ClassesUIMarmelade.h  DimensionalScaling.h  Entete.cpp  Entete.h  Entity.h  FonctionsMarmelade.cpp  FonctionsMarmelade.h  FonctionsPointerKeyboardMarmelade.h  FonctionsPointersKeyboardMarmelade.cpp  FrameworkSettings.cpp  FrameworkSettings.h  GameSettings.cpp  GameSettings.h  Helpers.cpp  Helpers.h  HelpersXML.cpp  HelpersXML.h  ObjectEditingOverlay.cpp  ObjectEditingOverlay.h  ProfilageMarmelade.cpp  ProfilageMarmelade.h  RenderObject.h  SocketMarmelade.cpp  SocketMarmelade.h  SoundMarmelade.cpp  SoundMarmelade.h  Trace.cpp  Trace.h  Vecteurs.cpp  Vecteurs.h  WindsockOverlay.cpp  WindsockOverlay.h  btDistanceConstraint.h
Application/Graphics/: Camera.cpp  Camera.h  FrameBufferObject.cpp  FrameBufferObject.h  Graphics.cpp  Graphics.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEngine.cpp  ParticleEngine.h  RenderManager.cpp  RenderManager.h  RenderModel.cpp  RenderModel.h  ShaderManager.cpp  ShaderManager.h  Shaders.cpp  Shaders.h  Viewport.cpp  Viewport.h
Application/Heightfield/: HeightfieldBuilder.cpp  HeightfieldBuilder.h  HeightfieldRuntime.cpp  HeightfieldRuntime.h
Application/Internet/: AuthorisationChecker.cpp  ConnectionListener.cpp  ConnectionListener.h  IncomingConnection.cpp  IncomingConnection.h  VersionChecker.cpp  WindowsBilling.cpp  WindowsBilling.h
Application/Languages/: English.cpp  French.cpp  German.cpp  PicaStrings.cpp  PicaStrings.h  Portugese.cpp
Application/Menus/: FileMenu.cpp  HelpMenu.cpp  HelpMenu.h  LoadingScreen.cpp  LoadingScreen.h  Menu.cpp  Menu.h  PicaDialog.cpp  PicaDialog.h  ScoreloopMenu.cpp  ScoreloopMenu.h  ScoreloopSetData.cpp  ScoreloopSetData.h  SelectMenu.cpp  SettingsMenu.cpp  SettingsWidgets.cpp  SettingsWidgets.h  StartMenu.cpp  StartMenu.h  WhatsNewMenu.cpp
Application/Other/: MemoryCheck.cpp  Profile.h  Scoreloop.cpp
Application/Physics/: EntityManager.cpp  EntityManager.h  Environment.cpp  Environment.h  Gate.cpp  Gate.h  SimpleObject.cpp  SimpleObject.h  ThermalManager.cpp  ThermalManager.h
Application/Plane/: Aerofoil.cpp  Aerofoil.h  AerofoilDefinition.cpp  AerofoilDefinition.h  AerofoilParameters.h  Aeroplane.cpp  Aeroplane.h  AeroplaneGraphics.cpp  AeroplaneGraphics.h  AeroplanePhysics.cpp  AeroplanePhysics.h  Engine.h  Fuselage.cpp  Fuselage.h  JetEngine.cpp  JetEngine.h  PropellerEngine.cpp  PropellerEngine.h  Wheel.cpp  Wheel.h  Wing.cpp  Wing.h
Application/Terrain/: Observer.cpp  Observer.h  Rope.cpp  Rope.h  Runway.cpp  Runway.h  SkyGrid.cpp  SkyGrid.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h
Application/UI/: AudioManager.cpp  AudioManager.h  ButtonOverlay.cpp  ButtonOverlay.h  DebugRenderer.cpp  DebugRenderer.h  PicaSim.cpp  PicaSim.h
Menus/: Menu_1080.group  Menu_2048.group  Menu_480.group  Menu_768.group
ProcessUI/: ProcessUI.sln  ProcessUI.vcxproj  main.cpp
SystemData/Audio/: GliderWhistle22050Stereo.raw  WindLoop22050Stereo.raw
SystemData/Objects/: Eagle0.ac  Eagle1.ac  Eagle2.ac  Eagle3.ac  Tower.ac
SystemSettings/Aeroplane/: ASW15.xml  AcroBat.xml  Banana.xml  CanardGlider.xml  Discus.xml  ElectricGlider.xml  ElectricKato.xml  ElectricNeoslope.xml  Extra3D.xml  Extra3DScaledUp.xml  ExtraControlLine.xml  F18Jet.xml  GeeBee.xml  Genie.xml  Icarus.xml  Jackdaw.xml  Jart.xml  Kato.xml  LeFish.xml  LeFishUltralight.xml  Magpie.xml  MartinWing.xml  MaxBee.xml  MiniDLG.xml  Minimoa.xml  MoyesHangGlider.xml  Neoslope.xml  Notos.xml  Peacemaker.xml  Phase6.xml  Quark.xml  Quartz.xml  RTEraserFive.xml  RTEraserFiveVPP.xml  Sherpa2.xml  SopwithPup.xml  Spirit26.xml  Spitfire.xml  SpitfirePSS.xml  ThePlank.xml  (+7 more)
SystemSettings/Challenge/: Duration-Meadow-Notos.xml  Duration-RecreationGround-Icarus.xml  Limbo-Cliff-Weasel.xml  Race-Cliff-Banana.xml  (+13 more)
UserSettings/: settings.xml
data/: alsoft.conf  app.config.txt  app.icf  trial-mode-80.xml  windows-debug.icf
installer/: PicaSim.iss
iwui_style/: iwui_1080_propertysets.itx  iwui_1080_stylesheet.itx  iwui_1536_style.group  iwui_2048_propertysets.itx  iwui_2048_style.group  iwui_240_propertysets.itx  iwui_240_resources.group  iwui_320_propertysets.itx  iwui_320_style.group  iwui_320_stylesheet.itx  iwui_480_propertysets.itx  iwui_640_resources.group  iwui_640_style.group  iwui_768_stylesheet.itx
resources/: Icon.psd  IconFree.psd  IconFreeNoBorder.psd  IconFull.psd  PicaSim.rc  generate_icons.py
tools/: generate_asset_manifest.py
(+1388 files in other folders)
